# summarize

./: README.md  prompt.sh  pyproject.toml  upgrade.sh
src/summarize/: decorators.py  main.py
src/summarize/clients/: base.py  openai.py
